Bug 1654933. Make ScrollFrameHelper::GetScrollRangeForUserInputEvents return a range that encompasses the visual viewport offset even if we are overflow: hidden. r=kats

Depends on D85983

Differential Revision: https://phabricator.services.mozilla.com/D85984